gccida/g3/gen_variable_die
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_variable_die/src/dwarf2out.c:10931:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *chain; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_variable_die/src/dwarf2out.c:10932:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_variable_die/src/dwarf2out.c:10961:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute dw_attr; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_variable_die/src/dwarf2out.c:10970:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute v51; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_variable_die/src/dwarf2out.c:10976:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute v57; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_variable_die/src/dwarf2out.c:11008:46: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'unsigned long long' of different size
*( __m128i *)&v36->die = _mm_unpacklo_epi64( ( __m128i)( unsigned __int64)v5, ( __m128i)( unsigned __int64)decl); 
                                             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_variable_die/src/dwarf2out.c:11008:79: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'unsigned long long' of different size
*( __m128i *)&v36->die = _mm_unpacklo_epi64( ( __m128i)( unsigned __int64)v5, ( __m128i)( unsigned __int64)decl); 
                                                                              ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_variable_die/src/dwarf2out.c:11102:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 9459, "add_abstract_origin_attribute"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_variable_die/src/dwarf2out.c:11160:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 4588, "AT_ref"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_variable_die/src/dwarf2out.c:11179:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 4387, "AT_flag"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_variable_die/src/dwarf2out.c:11367:48: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'unsigned long long' of different size
*( __m128i *)( v63 + 24) = _mm_unpacklo_epi64( ( __m128i)( unsigned __int64)high, ( __m128i)low); 
                                               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_variable_die/src/dwarf2out.c:11367:83: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'unsigned long long' of different size
*( __m128i *)( v63 + 24) = _mm_unpacklo_epi64( ( __m128i)( unsigned __int64)high, ( __m128i)low); 
                                                                                  ^~~~~~~~~~~~~
12 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_variable_die/src/obj/dwarf2out.o] Error 1
